<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/entireApp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.projects.shoppinglist.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/MyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/welcome_to_my_shopping_list" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <EditText
            android:id="@+id/addText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Item name"
            android:singleLine="true"
            android:nextFocusUp="@id/addText"
            android:nextFocusLeft="@id/addText"
            android:layout_weight="3"/>


        <EditText
            android:id="@+id/addQty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Qty"
            android:text="1"
            android:singleLine="true"
            android:inputType="number" />

        <Spinner
            android:id="@+id/addSpinner"
            android:drawSelectorOnTop="true"
            android:entries="@array/variant_array"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_bag" />

    </LinearLayout>



    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
