<resources>
    <string name="app_name">ShoppingList</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete Item</string>
    <string name="action_clear">Clear List</string>
    <string name="welcome_to_my_shopping_list">Shopping list: Universal</string>
    <string name="welcome_to_my_shopping_list_landscape">Shopping list: Universal</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="hello_world">Hello world!</string>
    <string name="enterName"> Enter name</string>
    <string name="myName">Your name: </string>
    <string name="myGender">Your gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirmation">Delete All?</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_share">Share list</string>

    <string-array name="variant_array">
        <item>Pcs</item>
        <item>ml</item>
        <item>L</item>
        <item>G</item>
    </string-array>
</resources>
